ui: Fix top margin for content containers
Currently, when a message is shown at the top or in users and groups page, The
top margin is too short. Increase it to 25px from 5px. Also:

- Don't use the .thumbnail class for containers as this does not match the
  semantics. Create and use class .contain-container.

- Also create class .card-container for all container containing cards. Unused
  for now.

- Indentation fixes.

- Remove duplicated rule.

--- a/static/themes/default/css/plinth.css
+++ b/static/themes/default/css/plinth.css
@@ -176,8 +176,11 @@ html {
   max-width: 1000px;
 }
 
-.container.thumbnail {
-    padding: 5px 50px 50px;
+.content-container {
+    padding: 25px 50px 50px;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
 
 footer {
@@ -369,10 +372,6 @@ a.menu_link_active {
     width: 100px;
     height: 100px;
     font-size: 80px;
-}
-
-.container.thumbnail {
-  padding: 5px 50px 50px;
 }
 
 /* Button table - Tables with a list of actions as buttons on top */
